@@ -1,3 +1,7 @@
+2007-10-23 Richard Frith-Macdonald  <rfm@gnu.org>
+
+	Postgres.m: Use E'...' syntax for bytea if it is available.
+
 2007-09-14 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	Update to LGPL3
